<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="com.rahulsinghkamboj.android.tuckbox.Activities.OrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gsl"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:id="@+id/gsl"
                        android:layout_weight="1"
                        android:src="@drawable/greensalad"/>
                    <RadioGroup
                        android:layout_width="0.0dip"
                        android:layout_weight="1"
                        android:id="@+id/GSL"
                        android:visibility="gone"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/none"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/none"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/ranch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/ranch"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/vinaigrette"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/vinaigrette"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="5dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lk"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="0.0dip"
                        android:id="@+id/lk"
                        android:src="@drawable/lambkorma"
                        android:padding="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <RadioGroup
                        android:layout_width="0.0dip"
                        android:layout_weight="1"
                        android:id="@+id/LK"
                        android:visibility="gone"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/mild"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/mild"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/med"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/med"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/hot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/hot"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="5dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ocs"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="0.0dip"
                        android:padding="20dp"
                        android:id="@+id/ops"
                        android:layout_height="wrap_content"
                        android:src="@drawable/openchicken"
                        android:layout_weight="1"/>
                    <RadioGroup
                        android:layout_width="0.0dip"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:id="@+id/OPS"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/white"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/rye"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/rye"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/wholemeal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/wholemeal"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="5dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bns"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="0.0dip"
                        android:id="@+id/bns"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:src="@drawable/beefnoodlesalad"
                        android:layout_weight="1"/>
                    <RadioGroup
                        android:layout_weight="1"
                        android:layout_width="0.0dip"
                        android:visibility="gone"
                        android:id="@+id/BNS"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/nochilli"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/nochilli"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/extrachilli"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/extrachilli"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:visibility="gone"
            android:id="@+id/btn_next"
            android:layout_gravity="bottom|center"
            android:layout_margin="20dp"
            android:background="@drawable/button"/>
    </LinearLayout>
</ScrollView>