<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.rahulsinghkamboj.android.tuckbox.Activities.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:background="#ffffff"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/til_Email">
        <EditText
            android:id="@+id/textEmailSignIn"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="#ffffff"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/til_Password">
        <EditText
            android:id="@+id/textPasswordSignIn"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="14sp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
        <View
            android:layout_margin="10dp"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"/>

        <com.google.android.gms.common.SignInButton
            android:layout_marginTop="50dp"
            android:id="@+id/sign_in_button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>
