<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rahulsinghkamboj.android.tuckbox.Activities.HomeActivity"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/ll1"
        android:padding="20dp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="0.0dip"
            android:layout_weight="1"
            app:cardElevation="20dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_button1"
                android:elevation="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:id="@+id/location_pn"
                android:textColor="@color/colorAccent"
                android:stateListAnimator="@null"
                android:text="@string/palmerston" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0.0dip"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardElevation="10dp"
            android:layout_height="match_parent">

            <Button
                android:stateListAnimator="@null"
                android:text="@string/feilding"
                android:id="@+id/location_fg"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:background="@drawable/home_button2"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:id="@+id/ll2"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="0.0dip"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardElevation="10dp"
            android:layout_height="match_parent">
        <Button
            android:layout_weight="1"
            android:text="@string/ashhurst"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:id="@+id/location_at"
            android:textColor="@color/colorAccent"
            android:stateListAnimator="@null"
            android:background="@drawable/home_button2"
            android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0.0dip"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardElevation="10dp"
            android:layout_height="match_parent">
        <Button
            android:layout_weight="1"
            android:text="@string/longburn"
            android:background="@drawable/home_button1"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:id="@+id/location_lb"
            android:textColor="@color/colorAccent"
            android:stateListAnimator="@null"
            android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
