<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.rahulsinghkamboj.android.tuckbox.Activities.TimingsActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                android:textSize="16sp"
                android:textColor="#fff"
                android:id="@+id/address"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please Select a Delivery Window:"
                android:padding="10dp"
                android:textColor="#fff"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:gravity="center"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/timings"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/time1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:text="@string/time1"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/time2"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/time3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/time3"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/time4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/time4"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RadioGroup>
                <com.devmarvel.creditcardentry.library.CreditCardForm
                    android:id="@+id/credit_card_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark"
                    app:helper_text_color="@color/colorPrimary"
                    app:include_security="true"
                    app:text_color="#000"
                    app:include_helper="false"
                    app:include_zip="false"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="Next"
        android:id="@+id/place_order"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

</LinearLayout>
